[package]
name = "uasm"
version = "1.0.2+2.57"
edition = "2024"
description = "A library to build the UASM compiler, for usage in build scripts."
authors = ["UnladenCoconut <unladencoconut@gmail.com>", "John Hankinson", "Branislav Habus" ]
repository = "https://github.com/Benkol003/uasm-rs"
license = "Watcom-1.0"
readme = "readme.md"

[dependencies]

[build-dependencies]
cc = "1.2.38"
